@@ -1,17 +1,15 @@
 package com.cinema.controller;
 
-import com.cinema.entity.*;
-import com.cinema.exception.HttpException;
-import com.cinema.exception.InternalServerException;
-import com.cinema.model.*;
-import com.cinema.repository.LikeRepository;
+import com.cinema.CustomException;
+import com.cinema.controller.request.*;
+import com.cinema.entities.*;
+import com.cinema.model.ApiResponse;
 import com.cinema.service.FilmService;
 import com.cinema.service.GenreService;
 import com.cinema.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
@@ -27,175 +25,106 @@ public class FilmController {
     private final GenreService genreService;
     private final UserService userService;
     private final ModelMapper modelMapper;
-    private final LikeRepository likeRepository;
 
     @GetMapping("/browse")
-    public ResponseEntity<List<CategorizedFilmsDTO>> getBrowseData(@RequestParam int size) {
-        try {
-            List<CategorizedFilmsDTO> categorizedFilmsDTOList = new ArrayList<>();
-            List<Film> films = new ArrayList<>();
-            List<Genre> genres = genreService.findAll();
-            genres.forEach(genre -> {
-                List<Long> excludedFilmsIds = new ArrayList<>();
-                excludedFilmsIds.add(0L); // SQl operator IN will not work with empty array
-                excludedFilmsIds.addAll(films.stream().map(Film::getId).toList());
-                List<Film> list = filmService.findAllByGenres(genre.getId(), 0, size, "created_at", excludedFilmsIds);
-                films.addAll(list);
-                List<FilmDTO> filmDTOList = list.stream().map(film -> modelMapper.map(film, FilmDTO.class)).collect(Collectors.toList());
+    public ApiResponse<List<CategorizedFilmsDTO>> getBrowseData(@RequestParam int size) {
+        List<CategorizedFilmsDTO> categorizedFilmsDTOList = new ArrayList<>();
+        List<Film> films = new ArrayList<>();
+        List<Genre> genres = genreService.findAll();
+        genres.forEach(genre -> {
+            List<Long> excludedFilmsIds = new ArrayList<>();
+            excludedFilmsIds.add(0L); // SQl operator IN will not work with empty array
+            excludedFilmsIds.addAll(films.stream().map(Film::getId).toList());
+            List<Film> list = filmService.findAllByGenres(genre.getId(), 0, size, "created_at", excludedFilmsIds);
+            films.addAll(list);
+            List<FilmDTO> filmDTOList = list.stream().map(film -> modelMapper.map(film, FilmDTO.class)).collect(Collectors.toList());
 
-                categorizedFilmsDTOList.add(new CategorizedFilmsDTO(genre, filmDTOList));
-            });
-            return ResponseEntity.ok(categorizedFilmsDTOList);
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+            categorizedFilmsDTOList.add(new CategorizedFilmsDTO(genre, filmDTOList));
+        });
+        return ApiResponse.successWithResult(categorizedFilmsDTOList);
     }
 
     @GetMapping("/search")
-    public ResponseEntity<Page<Film>> getSearchData(@RequestParam String searchText, @RequestParam int page, @RequestParam int size, @RequestParam String sortBy) {
-        try {
-            Page<Film> films = filmService.search(searchText, page - 1, size, sortBy);
-            return ResponseEntity.ok(films);
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Page<Film>> getSearchData(@RequestParam String searchText, @RequestParam int page, @RequestParam int size, @RequestParam String sortBy) {
+        Page<Film> films = filmService.search(searchText, page - 1, size, sortBy);
+        return ApiResponse.successWithResult(films);
     }
 
-//    @PutMapping()
-//    public ResponseEntity<FilmDTO> updateFilm(@RequestBody FilmDTO filmDTO) {
-//        try {
-//            var entity = this.filmService.updateFilm(filmDTO);
-//            return ResponseEntity.ok(modelMapper.map(entity, FilmDTO.class));
-//        } catch (HttpException ex) {
-//            throw ex;
-//        } catch (Exception ex) {
-//            throw new InternalServerException(ex.getMessage());
-//        }
-//    }
-
-
     @GetMapping("/{genre}")
-    public ResponseEntity<Page<Film>> getFilmsByGenre(@PathVariable("genre") String genreName, @RequestParam int page, @RequestParam int size, @RequestParam String sortBy) {
-        try {
-            Genre genre = genreService.findByName(genreName);
-            return ResponseEntity.ok(filmService.findAllByGenres(genre, page - 1, size, sortBy));
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Page<Film>> getFilmsByGenre(@PathVariable("genre") String genreName, @RequestParam int page, @RequestParam int size, @RequestParam String sortBy) {
+        Genre genre = genreService.findByName(genreName);
+        return ApiResponse.successWithResult(filmService.findAllByGenres(genre, page - 1, size, sortBy));
     }
 
     @GetMapping("/favorites")
-    public ResponseEntity<Page<Film>> getFavoriteFilms(@RequestParam int page, @RequestParam int size, @RequestParam String sortBy) {
-        try {
-            String username = SecurityContextHolder.getContext().getAuthentication().getName();
-            User user = userService.findByUsername(username);
-            return ResponseEntity.ok(filmService.findFavoriteFilmsByUserId(user.getId(), page - 1, size, sortBy));
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Page<Film>> getFavoriteFilms(@RequestParam int page, @RequestParam int size, @RequestParam String sortBy) throws CustomException {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userService.findByUsername(username);
+        return ApiResponse.successWithResult(filmService.findFavoriteFilmsByUserId(user.getId(), page - 1, size, sortBy));
     }
 
     @GetMapping("/singleFilm/{filmId}")
-    public ResponseEntity<FilmDTO> getFilmById(@PathVariable("filmId") Long filmId) {
-        try {
-            Film film = this.filmService.findById(filmId);
-            FilmDTO filmDTO = modelMapper.map(film, FilmDTO.class);
-            if (film.getComments().size() > 0){
-                for(CommentDTO comment: filmDTO.getComments()){
-                    comment.setUsername(film.getComments().get(0).getUser().getUsername());
-                }
-            }
+    public ApiResponse<FilmDTO> getFilmById(@PathVariable("filmId") Long filmId) throws CustomException {
 
-            return ResponseEntity.ok(filmDTO);
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
+        Film film = this.filmService.findById(filmId);
+        FilmDTO filmDTO = modelMapper.map(film, FilmDTO.class);
+        if (film.getComments().size() > 0) {
+            for (CommentDTO comment : filmDTO.getComments()) {
+                comment.setUsername(film.getComments().get(0).getUser().getUsername());
+            }
         }
+
+        return ApiResponse.successWithResult(filmDTO);
+
     }
 
     @PostMapping("/like")
-    public ResponseEntity<LikeDTO> createLike(@RequestBody LikeDTO likeDTO) {
-        try {
-            Like like1 = this.filmService.createLike(modelMapper.map(likeDTO, Like.class));
+    public ApiResponse<LikeDTO> createLike(@RequestBody LikeDTO likeDTO) {
 
-            return ResponseEntity.ok(modelMapper.map(like1, LikeDTO.class));
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+        Like like1 = this.filmService.createLike(modelMapper.map(likeDTO, Like.class));
+
+        return ApiResponse.successWithResult(modelMapper.map(like1, LikeDTO.class));
+
     }
 
     @PostMapping("/dislike")
-    public ResponseEntity<DislikeDTO> createDislike(@RequestBody DislikeDTO dislikeDTO) {
-        try {
-            Dislike dislike1 = this.filmService.createDislike(modelMapper.map(dislikeDTO, Dislike.class));
-            return ResponseEntity.ok(modelMapper.map(dislike1, DislikeDTO.class));
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<DislikeDTO> createDislike(@RequestBody DislikeDTO dislikeDTO) {
+
+        Dislike dislike1 = this.filmService.createDislike(modelMapper.map(dislikeDTO, Dislike.class));
+        return ApiResponse.successWithResult(modelMapper.map(dislike1, DislikeDTO.class));
+
     }
 
     @PostMapping("/comment")
-    public ResponseEntity<CommentDTO> createCommentDTO(@RequestBody CommentDTO commentDTO) {
-        try {
-            Comment comment1 = this.filmService.createComment(modelMapper.map(commentDTO, Comment.class));
-            CommentDTO commentDTO1 = modelMapper.map(comment1, CommentDTO.class);
-            var user = userService.findById(comment1.getUser().getId());
-            commentDTO1.setUsername(user.getUsername());
-            return ResponseEntity.ok(commentDTO1);
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<CommentDTO> createCommentDTO(@RequestBody CommentDTO commentDTO) throws CustomException {
+
+        Comment comment1 = this.filmService.createComment(modelMapper.map(commentDTO, Comment.class));
+        CommentDTO commentDTO1 = modelMapper.map(comment1, CommentDTO.class);
+        var user = userService.findById(comment1.getUser().getId());
+        commentDTO1.setUsername(user.getUsername());
+        return ApiResponse.successWithResult(commentDTO1);
+
     }
 
 
     @DeleteMapping("/comment/{id}")
-    public ResponseEntity<Comment> deleteComment(@PathVariable Long id) {
-        try {
-            this.filmService.deleteComment(id);
-            return ResponseEntity.noContent().build();
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Comment> deleteComment(@PathVariable Long id) throws CustomException {
+        return ApiResponse.successWithResult(this.filmService.deleteComment(id), "Delete Comment Successfully")
+
     }
 
     @DeleteMapping("/like/{id}")
-    public ResponseEntity<Like> deleteLike(@PathVariable Long id) {
-        try {
-            this.filmService.deleteLike(id);
-            return ResponseEntity.noContent().build();
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Like> deleteLike(@PathVariable Long id) throws CustomException {
+
+        this.filmService.deleteLike(id);
+        return ApiResponse.noContent().build();
+
     }
 
     @DeleteMapping("/dislike/{id}")
-    public ResponseEntity<Dislike> deleteDislike(@PathVariable Long id) {
-        try {
-            this.filmService.deleteDislike(id);
-            return ResponseEntity.noContent().build();
-        } catch (HttpException ex) {
-            throw ex;
-        } catch (Exception ex) {
-            throw new InternalServerException(ex.getMessage());
-        }
+    public ApiResponse<Dislike> deleteDislike(@PathVariable Long id) throws CustomException {
+
+        this.filmService.deleteDislike(id);
+        return ApiResponse.noContent().build();
     }
 }
